--- a/index-one2.css
+++ b/index-one2.css
@@ -47,7 +47,7 @@ max-width: 100%;
  .second-line-two{
     display: flex;
     justify-content: center;
-    
+    margin-right: 0.8%;
     gap: 300px;
     margin-top: 6%;
    
